<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<resources>
    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="app_name">Type-a-Number Challenge</string>
    <string name="title_activity_main">Type-a-Number Challenge</string>
    <string name="signed_out_greeting">Hello, anonymous user (not signed in)!</string>
    <string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="easy_mode_explanation">You\'re playing in easy mode, so you got the score you requested! Wasn\'t that easy?</string>
    <string name="hard_mode_explanation">You\'re playing in hard mode, so you only got half the score you requested! Isn\'t this game hard?</string>
    <string name="achievement_prime_toast_text">Prime score!</string>
    <string name="achievement_arrogant_toast_text">Arrogant (requested maximum score)!</string>
    <string name="achievement_humble_toast_text">Humble! (requested 0 score)</string>
    <string name="achievement_leet_toast_text">L33t! (got 1337 score)</string>
    <string name="achievement">Achievement</string>
    <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
    <string name="what_score_do_you_deserve">What score do you think you deserve?</string>
    <string name="initial_input">0000</string>
    <string name="digit0"> 0 </string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <string name="choose_difficulty">Choose a difficulty to play:</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="see_your_progress">See your progress:</string>
    <string name="show_achievements">Show Achievements</string>
    <string name="show_leaderboards">Show Leaderboards</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign out</string>
    <string name="you_win">You win! Your score is:</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your progress with friends.</string>
    <string name="signin_failure">Unable to sign in. Check your internet connection and try again later.</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
</resources>
