<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<!-- GAMEPLAY SCREEN -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/screen_gameplay"
        android:gravity="center"
        android:padding="20dp">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_score_do_you_deserve"
            android:layout_marginBottom="40dp" />

        <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_input"
                android:layout_marginBottom="40dp"
                android:textSize="40sp"
                android:id="@+id/score_input" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit7"
                android:textSize="20sp"
                android:padding="5dp"
                android:id="@+id/digit_button_7"
                />
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit8"
                android:textSize="20sp"
                android:padding="5dp"
                android:id="@+id/digit_button_8" />
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit9"
                android:textSize="20sp"
                android:padding="5dp"
                android:onClick="onDigitClicked"
                android:id="@+id/digit_button_9"
                 />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit4"
                android:textSize="20sp"
                android:padding="5dp"
                android:onClick="onDigitClicked"
                android:id="@+id/digit_button_4"
                />
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit5"
                android:textSize="20sp"
                android:padding="5dp"
                android:onClick="onDigitClicked"
                android:id="@+id/digit_button_5"
                />
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit6"
                android:textSize="20sp"
                android:padding="5dp"
                android:onClick="onDigitClicked"
                android:id="@+id/digit_button_6"
                />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit1"
                android:textSize="20sp"
                android:padding="5dp"
                android:onClick="onDigitClicked"
                android:id="@+id/digit_button_1"
                />
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit2"
                android:textSize="20sp"
                android:padding="5dp"
                android:onClick="onDigitClicked"
                android:id="@+id/digit_button_2"
                />
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit3"
                android:textSize="20sp"
                android:padding="5dp"
                android:onClick="onDigitClicked"
                android:id="@+id/digit_button_3"
                />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit0"
                android:textSize="20sp"
                android:padding="5dp"
                android:onClick="onDigitClicked"
                android:id="@+id/digit_button_0" />

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="20sp"
                android:padding="5dp"
                android:id="@+id/digit_button_clear" />

        </LinearLayout>

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:id="@+id/ok_score_button"
            android:layout_marginTop="40dp" />
</LinearLayout>

